tests/bytes/errors/fs_read_missing.dby
import std.fs as fs
print(fs.read_bytes("non_existent.bin"))
